# code_red

./: .gitignore  .gitmodules  AGENTS.md  APPLY_NOTES.txt  CHECK BUILD FOR MODS.txt  CODEX READ NOW.txt  CODE_RED_FreeMode_Piece_By_Piece_Content_Graft.md  CODE_RED_Freemode_Structure_SP_Graft_Plan.md  CODE_RED_MP_Restore_Codex_Handoff_After_Pass10.md  CODE_RED_SP_FreeMode_Sector_Graft_Codex_Task.md  CONTRIBUTING.md  CodeRED_AI_Trainer_Control_Handoff_2026-05-01.md  CodeRED_RPF_Patcher_Lite.py  Code_RED.bat  Code_RED_Dependency_Installer.bat  Code_RED_Dependency_Installer.ps1  Code_RED_Dependency_Installer.py  Double_Click_CodeRED_Ambush_CarTruck_WSC.bat  Double_Click_CodeRED_ArmPopulation_MicroTests.bat  Double_Click_CodeRED_Car1194_WagonThief_WSC.bat  Double_Click_CodeRED_DynamiteTransport_CarTruck_WSC.bat  Double_Click_CodeRED_EscortTransport_CarOnly_WSC.bat  Double_Click_CodeRED_RDR1_Resource_Lab.bat  Double_Click_CodeRED_Roadside_Robbery_CarTruck_WSC.bat  Double_Click_CodeRED_Vehicle_Script_Lab.bat  Double_Click_CodeRED_WSC_Bounds_Probe.bat  Double_Click_CodeRED_WSC_Vehicle_Replacer.bat  Double_Click_CodeRED_WagonThief_CarTruck_WSC.bat  Export_CodeX_Bundle_CLI.bat  Export_Model_XML_Bundle_CLI.bat  FEATURE_AUDIT.md  Import_CodeX_Bundle_CLI.bat  Import_Model_XML_Bundle_CLI.bat  Install-Mod.bat  Install-Mod.ps1  MAINTENANCE.md  MASTER_REPORT.json  Make-PortableFromCodeRED.ps1  PASS15_50_REPORT.txt  PRISTINE_PASS_REPORT.txt  (+91 more)
Code_RED_Make_Ready_Event_Modded_Files_v1/: Run_CodeRED_Make_Ready_Event_Modded_Files.bat
RDR-PC-Natives-DB-main/: Enums.h  Natives.h  README.md  Structs.h
SC-CL-master/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  install-distribution.vcxproj  llvm-headers.vcxproj  ocaml_all.vcxproj  ocaml_make_directory.vcxproj.filters  srpm.vcxproj  srpm.vcxproj.filters
ScriptHookRDR/: README.txt  ScriptHookConfig.ini
Settings/: Settings.example.txt  Settings.txt
asi_source/: BUILD_NOTES.md
backend/: codered_rpf_utils.py  python_workbench.py
bridge/: CodeREDLinkGhostProtocol.md  CodeREDLinkTypes.h  bridge_status.json  bridge_status.json.tmp  local_player_state.json  remote_players_state.json
builders/: build_codered_pass15_50_from_pass12.py
codered_app/: launcher_registry.py  paths.py
codered_wsc/: __init__.py  analysis.py  cli.py  patching.py  pools.py  resource.py
combine updates/: DELETE_OBSOLETE_FILES.txt  PATCH_MANIFEST.txt  README_AI_MENU_BRIDGE_INTEGRATION_PATCH.txt  README_PATCH.txt  python_workbench.py  run_workbench.py
config/: CodeRedRemoteMenu.json  SoulStealerConfig.json  car1194_wagonthief_plan.json  rdr1_vehicle_actor_ids.json  rdr1_vehicle_ids.json  sector_catalog.sample.json  uploaded_wsc_manifest.json  wagonthief_1183_1197_to_cartruck.json
data/: eActorEnum_minimal.csv
docs/: ASI_DIAGNOSTICS.md  CODE_RED_ACTIVE_ROUTE.md  CODE_RED_AMBUSH_CARTRUCK.md  CODE_RED_ARM_POPULATION_MICROTESTS.md  CODE_RED_CAR1194_WAGONTHIEF_WSC.md  CODE_RED_CONTENT_RPF_DEEP_SCAN.md  CODE_RED_DYNAMITE_TRANSPORT_CARTRUCK.md  CODE_RED_ESCORT_TRANSPORT_CARONLY.md  CODE_RED_LAYOUT_CONSOLIDATION_PASS_REPORT.md  CODE_RED_RDR1_FORMAT_STATUS.json  CODE_RED_RDR1_RESOURCE_LAB.md  CODE_RED_RDR1_RESOURCE_LAB_SELFTEST.md  CODE_RED_RDR1_RESOURCE_LAB_SELFTEST_STATUS.json  CODE_RED_RDR1_RESOURCE_LAB_V2_FIX.md  CODE_RED_RDR1_RESOURCE_LAB_V3_NOTES.md  CODE_RED_RDR1_RESOURCE_LAB_V4_OVERRIDE_NOTES.md  CODE_RED_RDR1_RESOURCE_LAB_V5_LASSO_OVERRIDE_NOTES.md  CODE_RED_RDR1_RESOURCE_LAB_V5_SELFTEST_LASSO.json  CODE_RED_RDR1_RESOURCE_LAB_V6_PATCH_APPLY_FIX.md  CODE_RED_RDR1_RESOURCE_LAB_V7_RAW_EXACT_PATCH.md  CODE_RED_RDR1_RESOURCE_LAB_V8_DUPLICATE_PATCH_FIX.md  CODE_RED_ROADSIDE_ROBBERY_CARTRUCK.md  CODE_RED_VEHICLE_SCRIPT_LAB.md  CODE_RED_VEHICLE_SCRIPT_LAB_PASS1.md  CODE_RED_VEHICLE_SCRIPT_LAB_PASS3.md  CODE_RED_VEHICLE_SCRIPT_LAB_PASS4.md  CODE_RED_VEHICLE_SCRIPT_LAB_SELFTEST.md  CODE_RED_VEHICLE_SCRIPT_LAB_SELFTEST_COMPARE.json  CODE_RED_VEHICLE_SCRIPT_LAB_SELFTEST_SCAN.json  CODE_RED_VEHICLE_SCRIPT_LAB_SELFTEST_STATUS.json  CODE_RED_WAGONTHIEF_CARTRUCK_WSC.md  CODE_RED_WSC_BOUNDS_PROBE.md  CODE_RED_WSC_DIRECT_ID_PATCHER.md  CODE_RED_WSC_DIRECT_ID_POPULATION.md  CODE_RED_WSC_VEHICLE_REPLACER.md  CodeRED_Content_Convert_Overlay_2026-05-07.md  CodeRED_DECOMPILE_RECOMPILE_GUIDE.md  CodeRED_MP_LAN_Fallback_Pretest_2026-05-07.md  CodeRED_One_App_Upgrade_Plan_2026-05-03.md  CodeRED_PORTABLE_SCRIPT_READER.md  (+26 more)
experimental_patch/: commongringos_car_gringo_player_use_pass1.wgd  commongringos_car_gringo_player_use_pass1_REPORT.md  commongringos_car_gringo_player_use_pass1_changes.csv  commongringos_car_gringo_player_use_pass1_unpacked.wgd
related_apps - Combine/asi/CodeREDCompanion/: CMakeLists.txt
related_apps/CodeRED_MP_RakNet_PoC/: .gitignore  CMakeLists.txt  README.md
related_apps/CodeRED_MP_RakNet_PoC/gamemodes/: codered_hello.pwn
related_apps/CodeRED_MP_RakNet_PoC/include/codered_mp/: client_net_stack.h  pawn_host.h  protocol.h
related_apps/CodeRED_MP_RakNet_PoC/qawno/include/: codered_mp.inc
related_apps/CodeRED_MP_RakNet_PoC/scripts/: build_pawn.sh
related_apps/CodeRED_MP_RakNet_PoC/src/: client_main.cpp  client_net_stack.cpp  pawn_host.cpp  protocol.cpp  server_main.cpp
(+6147 files in other folders)
